loopfor.LoopCourse.scala.code
Color.magenta
brushDown()
for (tour <- 1 to 11) {
  for (a <- 1 to 9) {
    forward();
}
